fixed closeButton placement on iOS

--- a/src/theme/components/closeButton.scss
+++ b/src/theme/components/closeButton.scss
@@ -4,6 +4,7 @@
 	background: none;
 	cursor: pointer;
 	color: $black;
+	padding: 0;
 	text-shadow: 0 1px 0 $white;
 	opacity: .2;
 	font-size: 1.5rem;
